--- a/LoopLab/css/style.css
+++ b/LoopLab/css/style.css
@@ -27,5 +27,15 @@ body {
 
 #home-section .home-inner {
   padding-top: 150px;
-  
+}
+
+#home-section .card-form {
+  opacity: 0.8;
+}
+
+#home-section .fas {
+  color: #008ed6;
+  background-color: #ffffff;
+  padding: 5px;
+  border-radius: 5px;
 }
